# grove

./: .gitignore  README.md  pyproject.toml  run.sh
src/grove/: __init__.py  __main__.py  app.py  config.py  discovery.py  git_ops.py  models.py  screens.py  state.py  vault.py  widgets.py
src/grove/providers/: __init__.py  base.py  bitbucket.py  github.py  gitlab.py
tests/: conftest.py  test_app_flow.py  test_discovery.py  test_git_ops.py  test_providers.py  test_vault.py
